# Insurance-Agent

./: Dockerfile  README.md  WHATSAPP_SETUP.md  debug_output.txt  debug_rag.py  implementation_plan.md  main.py  pyproject.toml  requirements.txt  run_services.sh  sessions.db  task.md
app/: main.py
app/agents/: survey_agent.py  telegram_bot.py
app/api/: server.py
app/db/: session_db.py
app/rag/: ingestion.py  retrieval.py
app/services/: agent_service.py  pdf_service.py  query_service.py  report_service.py  translation_service.py  voice_service.py
chroma_db/: chroma.sqlite3
data/: Ayushman_Bharat.txt  Insurance_Glossary.txt  LIC_Micro_Bachat.txt  LIC_New_Jeevan_Anand.txt  PMFBY_Scheme.txt
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  Footer.jsx  InputArea.jsx  LandingPage.jsx  Message.jsx  Navbar.jsx
frontend/src/pages/: AuthPage.jsx  ComparePage.jsx  DashboardPage.jsx  DocumentsPage.jsx  EducationPage.jsx  ProfilePage.jsx  PurchasePage.jsx  RoadmapPage.jsx  SettingsPage.jsx  SupportPage.jsx
scripts/: ingest_data.py
tests/: test_rag_sources.py  test_webhook_py.py  verify_backend.py  verify_db.py  verify_fixes.py  verify_multilingual.py  verify_pdf.py  verify_rural_flow.py  verify_voice.py  verify_voice_upgrade.py
